Implemented brute force solution for contains duplicate problem in the notebook

--- a/DSA/Questions/Arrays & Hashing/Contains Duplicate.ipynb
+++ b/DSA/Questions/Arrays & Hashing/Contains Duplicate.ipynb
@@ -38,7 +38,15 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def contains_duplicate_bruteforce(nums):\n",
+    "    n = len(nums)\n",
+    "    for i in range(n):\n",
+    "        for j in range(i + 1, n):\n",
+    "            if nums[i] == nums[j]:\n",
+    "                return True\n",
+    "    return False\n"
+   ]
   }
  ],
  "metadata": {
