Refactored 'Contains Duplicate' notebook: added sorting solution, updated execution counts, and cleaned up output handling.

--- a/DSA/Questions/Arrays & Hashing/Contains Duplicate.ipynb
+++ b/DSA/Questions/Arrays & Hashing/Contains Duplicate.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "924bb388",
    "metadata": {},
    "outputs": [],
@@ -29,33 +29,6 @@
    "execution_count": null,
    "id": "0a31890e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.11.9' requires the ipykernel package.\n",
-      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
-      "\u001b[1;31mOr install 'ipykernel' using the command: '\"c:/Users/Saikat Biswas/AppData/Local/Microsoft/WindowsApps/python3.11.exe\" -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
-   "source": [
-    "def contains_duplicate_bruteforce(nums):\n",
-    "    n = len(nums)\n",
-    "    for i in range(n):\n",
-    "        for j in range(i + 1, n):\n",
-    "            if nums[i] == nums[j]:\n",
-    "                return True\n",
-    "    return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52308280",
-   "metadata": {},
    "outputs": [],
    "source": [
     "def contains_duplicate_bruteforce(nums):\n",
@@ -64,7 +37,52 @@
     "        for j in range(i + 1, n):\n",
     "            if nums[i] == nums[j]:\n",
     "                return True\n",
-    "    return False\n"
+    "    return False\n",
+    "\n",
+    "# Example test case\n",
+    "nums = [1, 2, 3, 1]\n",
+    "print(contains_duplicate_bruteforce(nums))  # Output: True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a4c17bfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Algorithm        Sort nums in‑place (e.g. Timsort via nums.sort()), then scan once and check nums[i] == nums[i+1]\n",
+    "# Data structure(s)    Array (plus recursion buffer for some sorts)\n",
+    "# Time            O(n log n) for any comparison sort\n",
+    "# Space           O(1) extra if using in‑place quicksort (CPython’s Timsort uses O(n) worst‑case auxiliary)\n",
+    "# Pros            No hash table; keeps deterministic O(n log n) upper bound\n",
+    "# Cons            Slower than hash‑set approach; destroys original order (unless you copy); still needs O(n) memory in worst‑case Timsort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b89f5c9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def contains_duplicate_sort(nums):\n",
+    "    nums.sort()  # In-place sort\n",
+    "    for i in range(1, len(nums)):\n",
+    "        if nums[i] == nums[i - 1]:\n",
+    "            return True\n",
+    "    return False\n",
+    "# Example test case\n",
+    "nums = [1, 2, 3, 1]\n",
+    "print(contains_duplicate_bruteforce(nums))  # Output: True"
    ]
   }
  ],
@@ -75,8 +93,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.9"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
